v.0.4.4 - Payments with invoiceID.
- Payments: allow invoiceID
- Digits only fields: allow "Paste"
- Testnet: correct submit/activate links
- Offline: Sequence: allow only numbers

--- a/index.html
+++ b/index.html
@@ -240,6 +240,11 @@ a:hover {
   width: 266px;
 }
 
+.main-box .fields-wide .fields-group-header {
+  text-align: left;
+  padding-left: 3px;
+}
+
 .main-box .line-with-button {
   margin-bottom: 25px;
 }
@@ -1053,7 +1058,11 @@ a:hover {
                                 <div class="left">Destination tag:</div>
                                 <div class="right"><input type="text" id="payment_destination_tag" placeholder="If it's required" spellcheck="false" /></div>
                             </div>
-                            Recipient will receive
+                            <br>
+                            <div class="fields-group-header">
+                                <div class="left"></div>
+                                <div class="right">Recipient will receive</div>
+                            </div>
                             <div>
                                 <div class="left">Amount:</div>
                                 <div class="right"><input type="text" id="payment_amount" spellcheck="false" /></div>
@@ -1070,6 +1079,11 @@ a:hover {
                             <div class="secret-fields mnemonic-fields hidden">
                                 <div class="left">Counterparty:</div>
                                 <div class="right"><input type="text" id="payment_counterparty" placeholder="If the currency is different from XRP" spellcheck="false" /></div>
+                            </div>
+                            <br>
+                            <div class="secret-fields mnemonic-fields hidden">
+                                <div class="left">Invoice ID:</div>
+                                <div class="right"><input type="text" id="payment_invoiceid" placeholder="(optional)" spellcheck="false" /></div>
                             </div>
                         </div>
 
@@ -91638,7 +91652,7 @@ var QRCode;
 </script>
         <script>(function() {
 
-var version = '0.4.3';
+var version = '0.4.4';
 var testnet = false;
 var bithomp = 'https://bithomp.com';
 var bithompTestnet = 'https://test.bithomp.com';
@@ -91709,6 +91723,7 @@ DOM.paymentDestinationTag = $('#payment_destination_tag');
 DOM.paymentAmount = $('#payment_amount');
 DOM.paymentCurrency = $('#payment_currency');
 DOM.paymentCounterparty = $('#payment_counterparty');
+DOM.paymentInvoiceId = $('#payment_invoiceid');
 DOM.paymentPaths = $('#payment_paths');
 DOM.paymentButtonPay = $('#payment_pay');
 DOM.paymentButtonFindAlternatives = $('#payment_find_alternatives');
@@ -91833,7 +91848,9 @@ function init() {
   DOM.paymentAmount.on("keydown", paymentAmountChanged);
   DOM.paymentCurrency.on("keyup", paymentCurrencyChanged);
   DOM.paymentCounterparty.on("keydown", paymentCounterpartyChanged);
+  DOM.paymentInvoiceId.on("keydown", paymentInvoiceIdChanged);
   DOM.trustlineLimit.on("keydown", trustlineLimitChanged);
+  DOM.sequence.on("keydown", sequenceChanged);
   DOM.fee.on("keydown", feeChanged);
   DOM.settingsSelect.on("change", settingsSelected);
   settingsSelected();
@@ -91950,8 +91967,7 @@ function settingsSignersButtonAddClicked() {
 }
 
 function signersThresholdChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function orderQuantityAmountChanged(e) {
@@ -92188,6 +92204,10 @@ function settingsSelected() {
   eraseTXresults();
 }
 
+function sequenceChanged(e) {
+  digitize(e, 'numberWithoutDot');
+}
+
 function feeChanged(e) {
   digitize(e);
 }
@@ -92197,8 +92217,7 @@ function trustlineLimitChanged(e) {
 }
 
 function paymentDestinationTagChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function paymentAmountChanged(e) {
@@ -92220,13 +92239,25 @@ function paymentCounterpartyChanged() {
   eraseTXresults();
 }
 
-function digitize(e, allowDot=true) {
+function paymentInvoiceIdChanged(e) {
+  digitize(e, 'hex');
+  eraseTXresults();
+}
+
+function digitize(e, allow='numberWithDot') {
   // Allow: backspace, delete, tab, escape, enter
   var keyList = [46, 8, 9, 27, 13, 110];
 
-  if (allowDot) {
+  if (allow == 'numberWithDot') {
     //add . (dot)
     keyList.push(190);
+  }
+
+  if (allow == 'hex') {
+    //a-f, A-F
+    if (e.keyCode >= 65 && e.keyCode <= 70) {
+      return;
+    }
   }
 
   if ($.inArray(e.keyCode, keyList) !== -1 ||
@@ -92234,6 +92265,8 @@ function digitize(e, allowDot=true) {
     (e.keyCode == 65 && (e.ctrlKey === true || e.metaKey === true)) ||
      // Allow: Ctrl/cmd+C
     (e.keyCode == 67 && (e.ctrlKey === true || e.metaKey === true)) ||
+     // Allow: Ctrl/cmd+V
+    (e.keyCode == 86 && (e.ctrlKey === true || e.metaKey === true)) ||
      // Allow: Ctrl/cmd+X
     (e.keyCode == 88 && (e.ctrlKey === true || e.metaKey === true)) ||
      // Allow: home, end, left, right
@@ -92627,8 +92660,7 @@ function escrowCancelAfterClicked() {
 }
 
 function escrowDestinationTagChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function escrowAmountChanged(e) {
@@ -92636,28 +92668,23 @@ function escrowAmountChanged(e) {
 }
 
 function escrowYearChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function escrowMonthChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function escrowDayChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function escrowHourChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function escrowMinuteChanged(e) {
-  var allowDots = false;
-  digitize(e, allowDots);
+  digitize(e, 'numberWithoutDot');
 }
 
 function escrowButtonSubmitClicked() {
@@ -93307,6 +93334,14 @@ function paymentButtonPayClicked(path=-2) {
     return;
   }
 
+  var paymentInvoiceId = DOM.paymentInvoiceId.val();
+  if (paymentInvoiceId && !isSha256(paymentInvoiceId)) {
+    DOM.txFeedback.html("Invoice ID must be a valid 256-bit hash.");
+    DOM.paymentInvoiceId.focus();
+    return;
+  }
+  paymentInvoiceId = paymentInvoiceId.toUpperCase();
+
   var fee = txFee();
   if (!fee) {
     DOM.fee.focus();
@@ -93378,6 +93413,9 @@ function paymentButtonPayClicked(path=-2) {
   if (destinationTag)
     payment.destination.tag = destinationTag;
 
+  if (paymentInvoiceId)
+    payment.invoiceID = paymentInvoiceId;
+
   if (DOM.switchOnline.is(':checked')) {
     //show error if not activated
     //check if destination tag is required
@@ -93428,7 +93466,7 @@ function signingSecret() {
 
 function submitLink() {
   var address = signingAddress();
-  var url = 'https://bithomp.com/submit/' + address;
+  var url = bithomp + '/submit/' + address;
   DOM.submitLink.html('<a href="' + url + '" target="_blank">' + url + '</a>');
   submitUrlQR.makeCode(url);
 }
@@ -93503,18 +93541,6 @@ function txMemos() {
   return memos;
 }
 
-function paymentOffline(secret, account, payment, fee, sequence) {
-  api.preparePayment(account, payment, {fee: fee, sequence: sequence, maxLedgerVersion: null}).then(function(tx) {
-    var options = signingOptions();
-    var signed = api.sign(tx.txJSON, secret, options);
-    showSignedTX(signed);
-    //hash signed.id
-  }).catch(function (error) {
-    DOM.txFeedback.html('preparePayment: ' + error.message);
-    console.log(error);
-  })
-}
-
 function submitOnlineShowLink(blob, showItem, buttonElement, buttonValue) {
   api.submit(
     blob
@@ -93579,6 +93605,18 @@ function paymentOnline(secret, account, payment, fee, buttonDom) {
   }
 }
 
+function paymentOffline(secret, account, payment, fee, sequence) {
+  api.preparePayment(account, payment, {fee: fee, sequence: sequence, maxLedgerVersion: null}).then(function(tx) {
+    var options = signingOptions();
+    var signed = api.sign(tx.txJSON, secret, options);
+    showSignedTX(signed);
+    //hash signed.id
+  }).catch(function (error) {
+    DOM.txFeedback.html('preparePayment: ' + error.message);
+    console.log(error);
+  })
+}
+
 function validateRegularKey() {
   if (DOM.setAddress.is(':checked')) {
     var address = DOM.address.val();
@@ -93608,7 +93646,7 @@ function validateRegularKey() {
         }
       }).catch(function (error) {
         if (error.message == 'actNotFound') {
-          DOM.signAddressFeedback.html('This account is not activated yet. <a href="https://bithomp.com/activation/' + signAddress + '" target="_blank">Activate</a>');
+          DOM.signAddressFeedback.html('This account is not activated yet. <a href="' + bithomp + '/activation/' + signAddress + '" target="_blank">Activate</a>');
         } else if (error.message == 'instance.address does not conform to the "address" format') {
           DOM.signAddressFeedback.html('Incorrect address');
         } else {
@@ -93708,7 +93746,7 @@ function checkBalance(accountDOM, feedbackFieldDOM) {
         }
       }).catch(function (error) {
         if (error.message == 'actNotFound') {
-          feedbackFieldDOM.html('This account is not activated yet. <a href="https://bithomp.com/activation/' + account + '" target="_blank">Activate</a>');
+          feedbackFieldDOM.html('This account is not activated yet. <a href="' + bithomp + '/activation/' + account + '" target="_blank">Activate</a>');
         } else if (error.message == 'instance.address does not conform to the "address" format') {
           feedbackFieldDOM.html('Incorrect address');
         } else {
@@ -94425,8 +94463,13 @@ function isHex(h) {
   return re.test(h);
 }
 
+function isSha256(s) {
+  return isHex(s) && s.length == 64;
+}
+
 init();
 
-})();</script>
+})();
+</script>
     </body>
 </html>
